# video-bokeh

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/data/bg-20k_dev/: metadata.csv
backend/data/magick_dev/: metadata.csv  predictions.csv
backend/scripts/: setup_third_party.sh
backend/src/data/: _fusion.py  _neutral_bg.py  _seq_io.py  _sequence_geometry.py  classify_clip.py  convert_disparity.py  download_bg20k.py  download_bg20k_samples.py  download_magick.py  download_magick_samples.py  estimate_depth.py  estimate_disparity.py  estimate_video_disparity.py  fuse_per_object_disparity.py  generate_sequences.py  generate_video_sequences.py  pack_videos.py  prepare_any_to_bokeh.py
backend/src/data/depth/: __init__.py  base.py  depth_anything_v2.py
backend/src/video_bokeh/: main.py
backend/tests/: test_health.py
backend/tests/data/: test_depth_registry.py  test_estimate_disparity_smoke.py  test_fuse_per_object_disparity_smoke.py  test_fusion.py  test_manifest_object_depths.py  test_neutral_bg.py  test_prepare_any_to_bokeh.py  test_sequence_geometry.py
frontend/: Dockerfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontend/src/app/: layout.tsx
scripts/: analyze_magick_distribution.py
