[project]
name = "video-bokeh"
version = "0.1.0"
description = "Depth-aware synthetic bokeh pipeline for video, with a FastAPI backend and Next.js frontend."
authors = [
    { name = "Viacheslav Danilov", email = "viacheslav.v.danilov@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "imagecodecs>=2026.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pillow>=12.1.0",
    "pre-commit>=4.5.1",
    "pytest>=8.0.0",
    "ruff>=0.9.0",
    "tifffile>=2025.12.20",
    "ty>=0.0.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/video_bokeh", "src/data"]

[tool.ty.environment]
python-version = "3.13"

[tool.ty.src]
include = ["src"]
exclude = ["venv", ".venv", "tests"]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["video_bokeh", "data"]
